Archive2/23/22c65a8382029d/output
main.cpp: In function 'int main()':
main.cpp:5:45: error: no match for 'operator<' (operand types are 'std::basic_ostream<char>' and 'const int')
  std::cout << "I'm sorry, your income is: " < income;
                                             ^
main.cpp:5:45: note: candidate: operator<(int, int) <built-in>
main.cpp:5:45: note:   no known conversion for argument 1 from 'std::basic_ostream<char>' to 'int'
In file included from /usr/local/include/c++/5.2.0/bits/ios_base.h:46:0,
                 from /usr/local/include/c++/5.2.0/ios:42,
                 from /usr/local/include/c++/5.2.0/ostream:38,
                 from /usr/local/include/c++/5.2.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/5.2.0/system_error:274:3: note: candidate: bool std::operator<(const std::error_condition&, const std::error_condition&)
   operator<(const error_condition& __lhs,
   ^
/usr/local/include/c++/5.2.0/system_error:274:3: note:   no known conversion for argument 1 from 'std::basic_ostream<char>' to 'const std::error_condition&'
/usr/local/include/c++/5.2.0/system_error:200:3: note: candidate: bool std::operator<(const std::error_code&, const std::error_code&)
   operator<(const error_code& __lhs, const error_code& __rhs) noexcept
   ^
/usr/local/include/c++/5.2.0/system_error:200:3: note:   no known conversion for argument 1 from 'std::basic_ostream<char>' to 'const std::error_code&'
In file included from /usr/local/include/c++/5.2.0/string:52:0,
                 from /usr/local/include/c++/5.2.0/bits/locale_classes.h:40,
                 from /usr/local/include/c++/5.2.0/bits/ios_base.h:41,
                 from /usr/local/include/c++/5.2.0/ios:42,
                 from /usr/local/include/c++/5.2.0/ostream:38,
                 from /usr/local/include/c++/5.2.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/5.2.0/bits/basic_string.h:5009:5: note: candidate: template<class _CharT, class _Traits, class _Alloc> bool std::operator<(const _CharT*, const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&)
     operator<(const _CharT* __lhs,
     ^
/usr/local/include/c++/5.2.0/bits/basic_string.h:5009:5: note:   template argument deduction/substitution failed:
main.cpp:5:47: note:   mismatched types 'const _CharT*' and 'std::basic_ostream<char>'
  std::cout << "I'm sorry, your income is: " < income;
                                               ^
In file included from /usr/local/include/c++/5.2.0/string:52:0,
                 from /usr/local/include/c++/5.2.0/bits/locale_classes.h:40,
                 from /usr/local/include/c++/5.2.0/bits/ios_base.h:41,
                 from /usr/local/include/c++/5.2.0/ios:42,
                 from /usr/local/include/c++/5.2.0/ostream:38,
                 from /usr/local/include/c++/5.2.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/5.2.0/bits/basic_string.h:4997:5: note: candidate: template<class _CharT, class _Traits, class _Alloc> bool std::operator<(const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&, const _CharT*)
     operator<(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
     ^
/usr/local/include/c++/5.2.0/bits/basic_string.h:4997:5: note:   template argument deduction/substitution failed:
main.cpp:5:47: note:   'std::basic_ostream<char>' is not derived from 'const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>'
  std::cout << "I'm sorry, your income is: " < income;
                                               ^
In file included from /usr/local/include/c++/5.2.0/string:52:0,
                 from /usr/local/include/c++/5.2.0/bits/locale_classes.h:40,
                 from /usr/local/include/c++/5.2.0/bits/ios_base.h:41,
                 from /usr/local/include/c++/5.2.0/ios:42,
                 from /usr/local/include/c++/5.2.0/ostream:38,
                 from /usr/local/include/c++/5.2.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/5.2.0/bits/basic_string.h:4985:5: note: candidate: template<class _CharT, class _Traits, class _Alloc> bool std::operator<(const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&, const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&)
     operator<(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
     ^
/usr/local/include/c++/5.2.0/bits/basic_string.h:4985:5: note:   template argument deduction/substitution failed:
main.cpp:5:47: note:   'std::basic_ostream<char>' is not derived from 'const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>'
  std::cout << "I'm sorry, your income is: " < income;
                                               ^
In file included from /usr/local/include/c++/5.2.0/bits/stl_algobase.h:67:0,
                 from /usr/local/include/c++/5.2.0/bits/char_traits.h:39,
                 from /usr/local/include/c++/5.2.0/ios:40,
                 from /usr/local/include/c++/5.2.0/ostream:38,
                 from /usr/local/include/c++/5.2.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/5.2.0/bits/stl_iterator.h:1095:5: note: candidate: template<class _Iterator> bool std::operator<(const std::move_iterator<_Iterator>&, const std::move_iterator<_Iterator>&)
     operator<(const move_iterator<_Iterator>& __x,
     ^
/usr/local/include/c++/5.2.0/bits/stl_iterator.h:1095:5: note:   template argument deduction/substitution failed:
main.cpp:5:47: note:   'std::basic_ostream<char>' is not derived from 'const std::move_iterator<_Iterator>'
  std::cout << "I'm sorry, your income is: " < income;
                                               ^
In file included from /usr/local/include/c++/5.2.0/bits/stl_algobase.h:67:0,
                 from /usr/local/include/c++/5.2.0/bits/char_traits.h:39,
                 from /usr/local/include/c++/5.2.0/ios:40,
                 from /usr/local/include/c++/5.2.0/ostream:38,
                 from /usr/local/include/c++/5.2.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/5.2.0/bits/stl_iterator.h:1089:5: note: candidate: template<class _IteratorL, class _IteratorR> bool std::operator<(const std::move_iterator<_Iterator>&, const std::move_iterator<_IteratorR>&)
     operator<(const move_iterator<_IteratorL>& __x,
     ^
/usr/local/include/c++/5.2.0/bits/stl_iterator.h:1089:5: note:   template argument deduction/substitution failed:
main.cpp:5:47: note:   'std::basic_ostream<char>' is not derived from 'const std::move_iterator<_Iterator>'
  std::cout << "I'm sorry, your income is: " < income;
                                               ^
In file included from /usr/local/include/c++/5.2.0/bits/stl_algobase.h:67:0,
                 from /usr/local/include/c++/5.2.0/bits/char_traits.h:39,
                 from /usr/local/include/c++/5.2.0/ios:40,
                 from /usr/local/include/c++/5.2.0/ostream:38,
                 from /usr/local/include/c++/5.2.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/5.2.0/bits/stl_iterator.h:348:5: note: candidate: template<class _IteratorL, class _IteratorR> bool std::operator<(const std::reverse_iterator<_Iterator>&, const std::reverse_iterator<_IteratorR>&)
     operator<(const reverse_iterator<_IteratorL>& __x,
     ^
/usr/local/include/c++/5.2.0/bits/stl_iterator.h:348:5: note:   template argument deduction/substitution failed:
main.cpp:5:47: note:   'std::basic_ostream<char>' is not derived from 'const std::reverse_iterator<_Iterator>'
  std::cout << "I'm sorry, your income is: " < income;
                                               ^
In file included from /usr/local/include/c++/5.2.0/bits/stl_algobase.h:67:0,
                 from /usr/local/include/c++/5.2.0/bits/char_traits.h:39,
                 from /usr/local/include/c++/5.2.0/ios:40,
                 from /usr/local/include/c++/5.2.0/ostream:38,
                 from /usr/local/include/c++/5.2.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/5.2.0/bits/stl_iterator.h:298:5: note: candidate: template<class _Iterator> bool std::operator<(const std::reverse_iterator<_Iterator>&, const std::reverse_iterator<_Iterator>&)
     operator<(const reverse_iterator<_Iterator>& __x,
     ^
/usr/local/include/c++/5.2.0/bits/stl_iterator.h:298:5: note:   template argument deduction/substitution failed:
main.cpp:5:47: note:   'std::basic_ostream<char>' is not derived from 'const std::reverse_iterator<_Iterator>'
  std::cout << "I'm sorry, your income is: " < income;
                                               ^
In file included from /usr/local/include/c++/5.2.0/bits/stl_algobase.h:64:0,
                 from /usr/local/include/c++/5.2.0/bits/char_traits.h:39,
                 from /usr/local/include/c++/5.2.0/ios:40,
                 from /usr/local/include/c++/5.2.0/ostream:38,
                 from /usr/local/include/c++/5.2.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/5.2.0/bits/stl_pair.h:220:5: note: candidate: template<class _T1, class _T2> constexpr bool std::operator<(const std::pair<_T1, _T2>&, const std::pair<_T1, _T2>&)
     operator<(const pair<_T1, _T2>& __x, const pair<_T1, _T2>& __y)
     ^
/usr/local/include/c++/5.2.0/bits/stl_pair.h:220:5: note:   template argument deduction/substitution failed:
main.cpp:5:47: note:   'std::basic_ostream<char>' is not derived from 'const std::pair<_T1, _T2>'
  std::cout << "I'm sorry, your income is: " < income;
                                               ^
